# ares-sc2-bot-template

./: .gitmodules  README.md  config.yml  ladder.py  protoss_builds.yml  pyproject.toml  run.py  update_ares.py
.github/workflows/: build_windows_exe.yaml  ladder_zip.yml
bot/: main.py
scripts/: create_ladder_zip.py  create_pyinstaller_exe.py  create_pyinstaller_executable.py  update_ares.py  upload_to_ai_arena.py
